--- a/src/app/consultar-filme/consultar-filme.component.html
+++ b/src/app/consultar-filme/consultar-filme.component.html
@@ -1,4 +1,4 @@
-<h1>Consultar Filme</h1>
+<h2>Consultar</h2>
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
   <label>Identificador do filme:</label>
   <br>
